# PicoROMTP

./: Setup_PicoRomEmuPlugin.ps1  Setup_PicoRomEmuPlugin_README.md
host/tunerpro-plugin/: CMakeLists.txt  PicoROMTunerPro.sln  PicoROMTunerPro.vcxproj  PicoROMTunerPro.vcxproj.filters  README.md  build.ps1
host/tunerpro-plugin/include/: EmulationPluginCompat.h
host/tunerpro-plugin/src/: PicoRomEmulationPlugin.cpp  PicoRomLink.cpp  PicoRomLink.h
